[gd_scene load_steps=5 format=2]

[ext_resource path="res://Art/SwordSheet.png" type="Texture" id=1]
[ext_resource path="res://Scripts/ThrowingSword.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 4, 11 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 3, 10 )

[node name="ThrowingSword" type="RigidBody2D"]
collision_layer = 0
mode = 2
gravity_scale = 4.0
contacts_reported = 1
contact_monitor = true
script = ExtResource( 2 )
throw_speed = 400.0
despawn_time = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 9 )

[node name="SwordSprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
offset = Vector2( 1, 0 )
hframes = 2

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( 10 )

[connection signal="body_entered" from="." to="." method="_on_Sword_body_entered"]
[connection signal="body_entered" from="." to="." method="_on_ThrowingSword_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_ThrowingSword_body_exited"]
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
